# hra-api

./: .dockerignore  .env.example  .gitignore  API_DOCUMENTATION.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
api/: __init__.py  rest_api.py
scripts/: hallucination_toolkit.py
